--- a/client/src/containers/App.css
+++ b/client/src/containers/App.css
@@ -33,7 +33,7 @@
 .ActionItem {
     margin: 7px;
     border-radius: 5px;
-    border: 2px solid #0bc934;
+    border: 2px solid #73c585;
     box-shadow: 0 4px 6px #ccc;
     padding: 10px;
     width:75px;
@@ -44,6 +44,22 @@
     vertical-align: middle;
     display: inline-block;
   }
+
+  .ActionItemSelected {
+      background: #eaeaea;
+      margin: 7px;
+      border-radius: 5px;
+      border: 2px solid #eaeaea;
+      box-shadow: 0 4px 6px #ccc;
+      padding: 10px;
+      width:75px;
+      height: 20px;
+      text-align: center;
+      font-size: 17px;
+      font-weight: bold;
+      vertical-align: middle;
+      display: inline-block;
+    }
 
   div span{
     color: #DF612B;
